{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 95,
  "lineage": "6900420c-d57a-dc6e-9273-16bf393263a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078eb7f73fa4c60a3",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-054fcc4cb395c6fd7",
            "domain": "vpc",
            "id": "eipalloc-078eb7f73fa4c60a3",
            "instance": "i-0d7ab158fd1c15676",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b54c6c114e05fd71",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-42-162-154.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.162.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.lab-gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow-web",
            "aws_subnet.lab-subnet-1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005e54dee72cc1d00",
            "arn": "arn:aws:ec2:us-west-2:064859341316:instance/i-0d7ab158fd1c15676",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7ab158fd1c15676",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b54c6c114e05fd71"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b54c6c114e05fd71",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "52.42.162.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2c9df8492d4ddf6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080c40eb296aafd0b",
            "tags": {
              "Name": "lab"
            },
            "tags_all": {
              "Name": "lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c815db9ccf793a53"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab-key",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow-web",
            "aws_subnet.lab-subnet-1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:064859341316:internet-gateway/igw-0782c1b98fc6bf548",
            "id": "igw-0782c1b98fc6bf548",
            "owner_id": "064859341316",
            "tags": {
              "Name": "lab"
            },
            "tags_all": {
              "Name": "lab"
            },
            "vpc_id": "vpc-084827d659dd51bf0"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:064859341316:network-interface/eni-0b54c6c114e05fd71",
            "attachment": [
              {
                "attachment_id": "eni-attach-0015d02c2aba7990f",
                "device_index": 0,
                "instance": "i-0d7ab158fd1c15676"
              }
            ],
            "id": "eni-0b54c6c114e05fd71",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:af:1d:22:d2:cf",
            "owner_id": "064859341316",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c815db9ccf793a53"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080c40eb296aafd0b"
          },
          "dependencies": [
            "aws_security_group.allow-web",
            "aws_subnet.lab-subnet-1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:064859341316:route-table/rtb-0531f1146218ad53e",
            "id": "rtb-0531f1146218ad53e",
            "owner_id": "064859341316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0782c1b98fc6bf548",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab"
            },
            "tags_all": {
              "Name": "lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-084827d659dd51bf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab-gw",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab-subnet-1-attach-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df326b241f853325",
            "route_table_id": "rtb-0531f1146218ad53e",
            "subnet_id": "subnet-080c40eb296aafd0b"
          },
          "dependencies": [
            "aws_internet_gateway.lab-gw",
            "aws_route_table.lab-route-table",
            "aws_subnet.lab-subnet-1",
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:064859341316:security-group/sg-0c815db9ccf793a53",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c815db9ccf793a53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "064859341316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-084827d659dd51bf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:064859341316:subnet/subnet-080c40eb296aafd0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080c40eb296aafd0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064859341316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-subnet"
            },
            "tags_all": {
              "Name": "lab-subnet"
            },
            "vpc_id": "vpc-084827d659dd51bf0"
          },
          "dependencies": [
            "aws_vpc.lab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:064859341316:vpc/vpc-084827d659dd51bf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0380cbef989ddfc",
            "default_route_table_id": "rtb-0ce0012f96e31c2b3",
            "default_security_group_id": "sg-0f9443cb3a75b3459",
            "dhcp_options_id": "dopt-806696e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084827d659dd51bf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce0012f96e31c2b3",
            "owner_id": "064859341316",
            "tags": {
              "Name": "lab"
            },
            "tags_all": {
              "Name": "lab"
            }
          }
        }
      ]
    }
  ]
}